# bitrix24-ui-report

./: .env.development  .env.example  .env.production  README.md  architecture.md  main.py  pyproject.toml
.github/workflows/: test.yml
.qoder/quests/: fastapi-langchain-chatbot.md
.qoder/rules/: main.md
app/config/: config_manager.py  database.py  settings.py  utils.py
app/models/: conversation.py  mcp_server.py  message.py  provider_config.py
app/providers/: base.py  grok_provider.py  openai_provider.py
app/routers/: chat.py  config.py  conversations.py  mcp.py  providers.py  websocket.py
app/schemas/: chat.py  mcp.py
app/services/: chart_analyzer.py  chat_service.py  llm_manager.py  mcp_client.py  mcp_manager.py
app/static/css/: style.css
app/static/js/: charts.js  chat.js  websocket.js
app/templates/: conversations.html  index.html  settings.html
